# MoodPulse

./: .gitignore  FRONTEND_API_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  UPDATE_FREQUENCY.md  generate_mock_data_auto.py  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  view_db.py  vite.config.ts
docs/: BACKEND_MODULES.md  EMOTION_ANALYSIS_ALGORITHM.md  FRONTEND_MODULES.md  MODULE_STATUS.md  PYTHON_SERVICE.md  README.md
src/: App.tsx  Report.tsx  main.tsx  white-noise-picker.tsx
src-tauri/: Cargo.toml  build.rs  emotion_service.py  tauri.conf.json
src-tauri/src/: audio.rs  db.rs  db_tests.rs  emotion_analysis.rs  emotion_service.rs  main.rs
src/components/: BreakAlert.tsx  EmotionChart.tsx  EmotionControls.tsx  HoverToolbar.tsx  MoodPet.tsx  Pet.tsx  ReportWindow.tsx  SnapshotCard.tsx  WhiteNoiseControl.tsx  WhiteNoisePicker.tsx  WhiteNoisePickerWindow.tsx  Widget.tsx  WindowControls.tsx
src/hooks/: useEmotionAnalysis.ts  useEmotionDetection.ts  useEmotionTimeline.ts  useFocusAnalysis.ts
src/stores/: emotionStore.ts
src/styles/: index.css
src/utils/: emotionUtils.ts  tauriApi.ts
