[package]
name = "moodpulse"
version = "0.1.0"
description = "Your desktop emotional companion"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-create", "window-start-dragging", "window-show", "window-set-position", "window-close", "fs-create-dir", "window-set-always-on-top", "fs-write-file", "window-unminimize", "window-maximize", "fs-read-file", "fs-remove-file", "window-set-size", "window-minimize", "fs-read-dir", "window-unmaximize", "window-hide", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17"
parking_lot = "0.12"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
